Fix path in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="shortcut icon" href="public/assets/img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="public/assets/css/styles.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>Arthur MICHEL - PHP/Symfony developer</title>
 </head>
@@ -16,16 +16,16 @@
             <div class="space-y-5"><!-- Start Left Side -->
 
                 <div class="shadow rounded-xl overflow-hidden"><!-- Start User Block -->
-                    <div class="h-32 bg-cover" style="background-image: url('assets/img/cover.png');"></div>
+                    <div class="h-32 bg-cover" style="background-image: url('public/assets/img/cover.png');"></div>
                     <div class="pt-14 p-7 bg-white dark:bg-slate-800 relative">
                         <span class="status-badge bg-gray-400 dark:text-gray-800">Enthusiastic</span>
-                        <a href="/"><img src="assets/img/avatar.jpg" alt="Avatar" class="user-photo"></a>
+                        <a href="/"><img src="public/assets/img/avatar.jpg" alt="Avatar" class="user-photo"></a>
                         <div class="text-lg font-semibold mb-1.5 dark:text-white">Arthur MICHEL</div>
-                        <div class="text-sm text-gray-400 mb-7">PHP/Symfony Developer</div>
-                        <div class="flex group">
-                            <button class="download-btn">Download CV</button>
-                            <button class="download-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></button>
-                        </div>
+                        <div class="text-sm text-gray-400">PHP/Symfony Developer</div>
+                        <!--<div class="flex group">
+                            <button class="download-btn" disabled>Download CV</button>
+                            <button class="download-btn-icon" disabled><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></button>
+                        </div>-->
                     </div>
                 </div><!-- End User Block -->
 
@@ -117,7 +117,7 @@
                     <h2 class="block-title">Experience</h2>
 
                     <div class="mb-5 item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/kanoma.png');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/kanoma.png');">
                         </div>
 
                         <div class="w-full space-y-5">
@@ -172,7 +172,7 @@
                     </div>
 
                     <div class="mb-5 item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/younup.webp');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/younup.webp');">
                         </div>
 
                         <div class="w-full space-y-5">
@@ -222,7 +222,7 @@
                     </div>
 
                     <div class="mb-5 item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/naoweb.png');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/naoweb.png');">
                         </div>
 
                         <div class="w-full space-y-5">
@@ -271,7 +271,7 @@
                     </div>
 
                     <div class="item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/pdf.png');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/pdf.png');">
                         </div>
 
                         <div class="w-full space-y-5">
@@ -321,7 +321,7 @@
                 <div class="p-7 block-section"><!-- Start Education Block -->
                     <h2 class="block-title">Education</h2>
                     <div class="mb-5 item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/eni.png');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/eni.png');">
                         </div>
 
                         <div class="w-full space-y-5">
@@ -360,7 +360,7 @@
                     </div>
 
                     <div class="item-section">
-                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('assets/img/joliverie.jpg');">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/joliverie.jpg');">
                         </div>
 
                         <div class="w-full space-y-5">
