--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="public/assets/img/favicon.png" type="image/x-icon">
+    
+    <!-- HTML Meta Tags -->
+    <title>Arthur MICHEL - PHP/Symfony developer</title>
+    <meta name="description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Arthur MICHEL - PHP/Symfony developer">
+    <meta itemprop="description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta itemprop="image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://arthurmichel.fr">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Arthur MICHEL - PHP/Symfony developer">
+    <meta property="og:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta property="og:image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Arthur MICHEL - PHP/Symfony developer">
+    <meta name="twitter:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta name="twitter:image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+    
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="public/assets/css/styles.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <title>Arthur MICHEL - PHP/Symfony developer</title>
 </head>
 <body class="bg-gray-100 dark:bg-slate-900 antialiased">
     <main class="main-container">
