Fix metadata image URL

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Arthur MICHEL - PHP/Symfony developer">
     <meta itemprop="description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
-    <meta itemprop="image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+    <meta itemprop="image" content="https://zupimages.net/up/23/05/2vb6.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://arthurmichel.fr">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Arthur MICHEL - PHP/Symfony developer">
     <meta property="og:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
-    <meta property="og:image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+    <meta property="og:image" content="https://zupimages.net/up/23/05/2vb6.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Arthur MICHEL - PHP/Symfony developer">
     <meta name="twitter:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
-    <meta name="twitter:image" content="https://zupimages.net/viewer.php?id=23/05/wa20.png">
+    <meta name="twitter:image" content="https://zupimages.net/up/23/05/2vb6.png">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="public/assets/css/styles.css">
