--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <div class="font-medium text-right text-gray-600 dark:text-gray-200">
                                 <ul class="flex space-x-5">
                                     <li>
-                                        <a href="https://linkedin.com/in/arthvrmichel" target="_blank" class="social-link-hover">
+                                        <a href="https://linkedin.com/in/arthurmichl" target="_blank" class="social-link-hover">
                                             <i class='bx bxl-linkedin text-2xl' ></i>
                                         </a>
                                     </li>
