Fix en error in a text

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 </div>
                             </div>
                             <p class="text-gray-600 dark:text-gray-200">
-                                In my <strong>first mission</strong> I was involved in the reation of an application allowing the company's partners to simply post the reviews they receive via their internal tools on their Google pages.
+                                In my <strong>first mission</strong> I was involved in the creation of an application allowing the company's partners to simply post the reviews they receive via their internal tools on their Google pages.
                                 The major subject was the extraction of the review moderation part of the historical application to make it a separate service.
                             </p>
                             <p class="text-gray-600 dark:text-gray-200">
