Update email contact address

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="flex justify-between">
                             <div class="text-gray-400">Email</div>
                             <div class="font-medium text-right text-gray-600 dark:text-gray-200">
-                                bonjour@arthurmichel.fr
+                                contact@arthurmichel.fr
                             </div>
                         </div>
                     </div>
