--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/arthvrmichel" target="_black" class="social-link-hover">
+                                        <a href="https://github.com/arthur-mchl" target="_black" class="social-link-hover">
                                             <i class='bx bxl-github text-2xl' ></i>
                                         </a>
                                     </li>
@@ -117,6 +117,7 @@
                     <div class="-m-2 flex flex-wrap">
                         <span class="skill-tag">PHP</span>
                         <span class="skill-tag">Symfony</span>
+                        <span class="skill-tag">Docker</span>
                         <span class="skill-tag">SQL</span>
                         <span class="skill-tag">Javascript</span>
                         <span class="skill-tag">HTML/CSS</span>
@@ -182,7 +183,8 @@
                             </p>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7.4/8.1</span>
-                                <span class="skill-tag">Symfony 4.4/5.4</span>
+                                <span class="skill-tag">Symfony 4.4/5.4/6</span>
+                                <span class="skill-tag">Docker</span>
                                 <span class="skill-tag">PostgreSQL 9.4</span>
                                 <span class="skill-tag">MySQL</span>
                                 <span class="skill-tag">Maria DB</span>
