--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                             <div class="font-medium text-right text-gray-600 dark:text-gray-200">
                                 <ul class="flex space-x-5">
                                     <li>
-                                        <a href="https://linkedin.com/in/arthurmichl" target="_blank" class="social-link-hover">
+                                        <a href="https://linkedin.com/in/arthur-mchl" target="_blank" class="social-link-hover">
                                             <i class='bx bxl-linkedin text-2xl' ></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://github.com/arthur-mchl" target="_black" class="social-link-hover">
+                                        <a href="https://github.com/arthurmicheI" target="_black" class="social-link-hover">
                                             <i class='bx bxl-github text-2xl' ></i>
                                         </a>
                                     </li>
