--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <link rel="shortcut icon" href="public/assets/img/favicon.png" type="image/x-icon">
     
     <!-- HTML Meta Tags -->
-    <title>Arthur MICHEL - PHP/Symfony developer</title>
-    <meta name="description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <title>Arthur MICHEL - Développeur PHP/Symfony</title>
+    <meta name="description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Arthur MICHEL - PHP/Symfony developer">
-    <meta itemprop="description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta itemprop="name" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta itemprop="description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
     <meta itemprop="image" content="https://zupimages.net/up/23/05/2vb6.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://arthurmichel.fr">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Arthur MICHEL - PHP/Symfony developer">
-    <meta property="og:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta property="og:title" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta property="og:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
     <meta property="og:image" content="https://zupimages.net/up/23/05/2vb6.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Arthur MICHEL - PHP/Symfony developer">
-    <meta name="twitter:description" content="I am an experienced PHP developer with a strong expertise in the Symfony framework.">
+    <meta name="twitter:title" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta name="twitter:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
     <meta name="twitter:image" content="https://zupimages.net/up/23/05/2vb6.png">
     
     <!-- Stylesheet -->
@@ -41,10 +41,10 @@
                 <div class="shadow rounded-xl overflow-hidden"><!-- Start User Block -->
                     <div class="h-32 bg-cover" style="background-image: url('public/assets/img/cover.png');"></div>
                     <div class="pt-14 p-7 bg-white dark:bg-slate-800 relative">
-                        <span class="status-badge bg-gray-400 dark:text-gray-800">Enthusiastic</span>
+                        <span class="status-badge bg-gray-400 dark:text-gray-800">Enthousiaste</span>
                         <a href="/"><img src="public/assets/img/avatar.jpg" alt="Avatar" class="user-photo"></a>
                         <div class="text-lg font-semibold mb-1.5 dark:text-white">Arthur MICHEL</div>
-                        <div class="text-sm text-gray-400">PHP/Symfony Developer</div>
+                        <div class="text-sm text-gray-400">Développeur PHP/Symfony</div>
                         <!--<div class="flex group">
                             <button class="download-btn" disabled>Download CV</button>
                             <button class="download-btn-icon" disabled><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg></button>
