--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Arthur MICHEL - Développeur PHP/Symfony">
     <meta name="twitter:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta name="twitter:image" content="https://zupimages.net/up/23/05/2vb6.png">
+    <meta name="twitter:image" content="https://zupimages.net/up/23/28/rw9g.png">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="public/assets/css/styles.css">
