--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Arthur MICHEL - Développeur PHP/Symfony">
     <meta itemprop="description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta itemprop="image" content="https://zupimages.net/up/23/05/2vb6.png">
+    <meta itemprop="image" content="https://zupimages.net/up/23/28/rw9g.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://arthurmichel.fr">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Arthur MICHEL - Développeur PHP/Symfony">
     <meta property="og:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta property="og:image" content="https://zupimages.net/up/23/05/2vb6.png">
+    <meta property="og:image" content="https://zupimages.net/up/23/28/rw9g.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
