--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                             <div class="font-medium text-right text-gray-600 dark:text-gray-200">Nantes</div>
                         </div>
                         <div class="flex justify-between">
-                            <div class="text-gray-400 dark:text-gray-400">Experience</div>
-                            <div class="font-medium text-right text-gray-600 dark:text-gray-200">5+ years</div>
+                            <div class="text-gray-400 dark:text-gray-400">Expérience</div>
+                            <div class="font-medium text-right text-gray-600 dark:text-gray-200">5+ ans</div>
                         </div>
                         <div class="flex justify-between">
                             <div class="text-gray-400">Permis de conduire</div>
