--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="flex justify-between">
                             <div class="text-gray-400 dark:text-gray-400">Expérience</div>
-                            <div class="font-medium text-right text-gray-600 dark:text-gray-200">5+ ans</div>
+                            <div class="font-medium text-right text-gray-600 dark:text-gray-200">+5 ans</div>
                         </div>
                         <div class="flex justify-between">
                             <div class="text-gray-400">Permis de conduire</div>
