--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <h2 class="block-title">A propos de moi</h2>
                     <p class="text-gray-600 dark:text-gray-200 pb-8">
                         👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony<br>
-                        🫱🏻‍🫲🏽 J'ai une grande capacité d'adaptation et je m'intègre rapidement aux équipes de développement<br>
+                        👨🏻 J'ai une grande capacité d'adaptation et je m'intègre rapidement aux équipes de développement<br>
                         🦾 Grâce à mon solide savoir-faire technique je suis en mesure de créer des applications web performantes et fiables<br>
                         👀 Je suis toujours à l'affût des dernières tendances technologiques pour maintenir mes compétences à jour et proposer des solutions innovantes à mes clients
                     </p>
