--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <span class="skill-tag">Maria DB</span>
                                 <span class="skill-tag">Xdebug</span>
                                 <span class="skill-tag">PHPCS</span>
-                                <span class="skill-tag">Gitlab</span>
+                                <span class="skill-tag">GitLab</span>
                             </div>
                             <div class="border-b border-gray-200"></div>
                         </div>
@@ -244,7 +244,7 @@
                                 <span class="skill-tag">PostgreSQL 9.4</span>
                                 <span class="skill-tag">Xdebug</span>
                                 <span class="skill-tag">PHPCS</span>
-                                <span class="skill-tag">Gitlab</span>
+                                <span class="skill-tag">GitLab</span>
                             </div>
                             <div class="border-b border-gray-200"></div>
                         </div>
@@ -293,7 +293,7 @@
                                 <span class="skill-tag">Symfony 4.4</span>
                                 <span class="skill-tag">API Platform</span>
                                 <span class="skill-tag">PostgreSQL</span>
-                                <span class="skill-tag">Gitlab</span>
+                                <span class="skill-tag">GitLab</span>
                             </div>
                             <div class="border-b border-gray-200"></div>
                         </div>
@@ -334,14 +334,22 @@
                                 </div>
                             </div>
                             <p class="text-gray-600 dark:text-gray-200">
-                                J'ai participé à plusieurs projets visant à répondre aux besoins internes, y compris le développement d'un ERP pour la gestion du processus de recrutement. Développement à la fois côté serveur (back-end) et côté client (front-end).
+                                Participation à plusieurs projets répondant à des besoins en interne dont la réalisation d’un ERP de gestion du processus de recrutement.
+                                <ul>
+                                    <li>Développement back-end en PHP Symfony 3.4</li>
+                                    <li>Développement et dynamisation d'écrans en JQuery</li>
+                                    <li>Développement de plusieurs applications pour le parc du Puy du Fou</li>
+                                    <li>Participation à la réalisation d'une application de comptage des visiteurs en fonction des attractions pour gérer l'affluence dans le parc</li>
+                                    <li>Développement au sein du SI RH d'un ERP permettant la gestion du process RH de bout en bout, du dépôt du CV par un candidat jusqu'au suivi du collaborateur au sein des équipes</li>
+                                    <li>Conception base de données SQLServer</li>
+                                </ul>
                             </p>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7</span>
                                 <span class="skill-tag">Symfony 3.4</span>
                                 <span class="skill-tag">jQuery</span>
                                 <span class="skill-tag">SQLServer</span>
-                                <span class="skill-tag">Gitlab</span>
+                                <span class="skill-tag">GitLab</span>
                             </div>
                         </div>
                     </div>
