--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Participation à plusieurs projets répondant à des besoins en interne dont la réalisation d’un ERP de gestion du processus de recrutement.
                             </p>
-                            <ul class="list-disc">
-                                <li class="text-gray-600 dark:text-gray-200">Développement back-end en PHP Symfony 3.4</li>
-                                <li class="text-gray-600 dark:text-gray-200">Développement et dynamisation d'écrans en JQuery</li>
-                                <li class="text-gray-600 dark:text-gray-200">Développement de plusieurs applications pour le parc du Puy du Fou</li>
-                                <li class="text-gray-600 dark:text-gray-200">Participation à la réalisation d'une application de comptage des visiteurs en fonction des attractions pour gérer l'affluence dans le parc</li>
-                                <li class="text-gray-600 dark:text-gray-200">Développement au sein du SI RH d'un ERP permettant la gestion du process RH de bout en bout, du dépôt du CV par un candidat jusqu'au suivi du collaborateur au sein des équipes</li>
-                                <li class="text-gray-600 dark:text-gray-200">Conception base de données SQLServer</li>
+                            <ul>
+                                <li class="li-exp">Développement back-end en PHP Symfony 3.4</li>
+                                <li class="li-exp">Développement et dynamisation d'écrans en JQuery</li>
+                                <li class="li-exp">Développement de plusieurs applications pour le parc du Puy du Fou</li>
+                                <li class="li-exp">Participation à la réalisation d'une application de comptage des visiteurs en fonction des attractions pour gérer l'affluence dans le parc</li>
+                                <li class="li-exp">Développement au sein du SI RH d'un ERP permettant la gestion du process RH de bout en bout, du dépôt du CV par un candidat jusqu'au suivi du collaborateur au sein des équipes</li>
+                                <li class="li-exp">Conception base de données SQLServer</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7</span>
