--- a/index.html
+++ b/index.html
@@ -288,6 +288,13 @@
                                 Réalisation d'un ERP permettant la recherche et la mise en relation d'artisans avec des clients en fonction de leurs spécialités et de différents critères. Développement de l'API permettant le renvoi des informations.
                                 Utilisation d'API Platform pour adapter l'application Symfony en une API REST.
                             </p>
+                            <ul>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end de l'application en Symfony 4.4</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement de l'API REST</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Utilisation d'API Platform</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Mise en place de la base de données PostgreSQL</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning du projet sur GitLab</li>
+                            </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7</span>
                                 <span class="skill-tag">Symfony 4.4</span>
