--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <span class="skill-tag">Javascript</span>
                         <span class="skill-tag">HTML/CSS</span>
                         <span class="skill-tag">Git</span>
-                        <span class="skill-tag">AGILE</span>
+                        <span class="skill-tag">AGILE/PSM1</span>
                     </div>
                 </div><!-- End Skills Block -->
 
