--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                                 Développement de solutions pour l'annotation et la diffusion de ressources éducatives libres. Travail en autonomie au sein de la chaire universitaire UNESCO RELIA (Ressources Educatives Libres et Intelligence Artificielle).
                             </p>
                             <ul>
-                                <li class="li-exp">Conception d'une extension web permettant l'annotation de ressources éducatives</li>
-                                <li class="li-exp">Adaptation d'un site web existant</li>
-                                <li class="li-exp">Rédaction de documentation</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Conception d'une extension web permettant l'annotation de ressources éducatives</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Adaptation d'un site web existant</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de documentation</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">HTML/CSS</span>
@@ -228,10 +228,10 @@
                                 Développement de correctifs et de nouvelles fonctionnalités au sein de l'équipe de développement. Participation aux évènements Agile (daily scrum, sprint planning/review/retro). Travail au sein d'une équipe structurée de 6 développeurs.
                             </p>
                             <ul>
-                                <li class="li-exp">Modélisation/réalisation d'une API Rest from scratch avec API Platform dans un environnement dockerisé (PHP8.1 & Symfony 5.4)</li>
-                                <li class="li-exp">Préparation de l'application à une montée de version de Symfony (3.4 -> 4.4)</li>
-                                <li class="li-exp">Rédaction de tests unitaire (PHPUnit)</li>
-                                <li class="li-exp">Versioning et revue de code sur GitLab</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Modélisation/réalisation d'une API Rest from scratch avec API Platform dans un environnement dockerisé (PHP8.1 & Symfony 5.4)</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Préparation de l'application à une montée de version de Symfony (3.4 -> 4.4)</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaire (PHPUnit)</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7.3/7.4</span>
@@ -283,10 +283,10 @@
                                 Développement de correctifs et de nouvelles fonctionnalités sur l'interface client ainsi que sur celle d'administration dans le cadre de nouvelles offres notamment.
                             </p>
                             <ul>
-                                <li class="li-exp">Développement back-end en Symfony 3.4 ainsi qu'en PHP Legacy</li>
-                                <li class="li-exp">Communication avec les bases de données MariaDB</li>
-                                <li class="li-exp">Versioning et revue de code sur GitLab</li>
-                                <li class="li-exp">Méthode de développement DDD</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 3.4 ainsi qu'en PHP Legacy</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec les bases de données MariaDB</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Méthode de développement DDD</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7.4</span>
@@ -334,9 +334,9 @@
                                 Développement d'une application permettant aux partenaires de l'entreprise de poster simplement les avis qu'ils reçoivent via leurs outils internes sur leurs pages Google. Extraction de la partie modération des avis de l'application historique afin d'en faire un service à part.
                             </p>
                             <ul>
-                                <li class="li-exp">Développement back-end en Symfony 5.2</li>
-                                <li class="li-exp">Communication avec la base de données MySQL</li>
-                                <li class="li-exp">Versioning et revue de code sur GitLab</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 5.2</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec la base de données MySQL</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7.4</span>
@@ -388,10 +388,10 @@
                                 Découpage des exigences en tâches distinctes et quantification du temps nécessaire pour les réaliser.
                             </p>
                             <ul>
-                                <li class="li-exp">Développement back-end en Symfony 4.4</li>
-                                <li class="li-exp">Communication avec la base de données PostgreSQL</li>
-                                <li class="li-exp">Rédaction de tests unitaires</li>
-                                <li class="li-exp">Versioning et revue de code sur GitLab</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 4.4</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec la base de données PostgreSQL</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaires</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7</span>
@@ -493,12 +493,12 @@
                                 Participation à plusieurs projets répondant à des besoins en interne dont la réalisation d’un ERP de gestion du processus de recrutement.
                             </p>
                             <ul>
-                                <li class="li-exp">Développement back-end en PHP Symfony 3.4</li>
-                                <li class="li-exp">Développement et dynamisation d'écrans en JQuery</li>
-                                <li class="li-exp">Développement de plusieurs applications pour le parc du Puy du Fou</li>
-                                <li class="li-exp">Participation à la réalisation d'une application de comptage des visiteurs en fonction des attractions pour gérer l'affluence dans le parc</li>
-                                <li class="li-exp">Développement au sein du SI RH d'un ERP permettant la gestion du process RH de bout en bout, du dépôt du CV par un candidat jusqu'au suivi du collaborateur au sein des équipes</li>
-                                <li class="li-exp">Conception base de données SQLServer</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en PHP Symfony 3.4</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement et dynamisation d'écrans en JQuery</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement de plusieurs applications pour le parc du Puy du Fou</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Participation à la réalisation d'une application de comptage des visiteurs en fonction des attractions pour gérer l'affluence dans le parc</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement au sein du SI RH d'un ERP permettant la gestion du process RH de bout en bout, du dépôt du CV par un candidat jusqu'au suivi du collaborateur au sein des équipes</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Conception base de données SQLServer</li>
                             </ul>
                             <div class="-m-2 flex flex-wrap">
                                 <span class="skill-tag">PHP 7</span>
