--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Développement de solutions pour l'annotation et la diffusion de ressources éducatives libres. Travail en autonomie au sein de la chaire universitaire UNESCO RELIA (Ressources Educatives Libres et Intelligence Artificielle).
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Conception d'une extension web permettant l'annotation de ressources éducatives</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Adaptation d'un site web existant</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de documentation</li>
@@ -227,7 +227,7 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Développement de correctifs et de nouvelles fonctionnalités au sein de l'équipe de développement. Participation aux évènements Agile (daily scrum, sprint planning/review/retro). Travail au sein d'une équipe structurée de 6 développeurs.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Modélisation/réalisation d'une API Rest from scratch avec API Platform dans un environnement dockerisé (PHP8.1 & Symfony 5.4)</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Préparation de l'application à une montée de version de Symfony (3.4 -> 4.4)</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaire (PHPUnit)</li>
@@ -282,7 +282,7 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Développement de correctifs et de nouvelles fonctionnalités sur l'interface client ainsi que sur celle d'administration dans le cadre de nouvelles offres notamment.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 3.4 ainsi qu'en PHP Legacy</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec les bases de données MariaDB</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
@@ -333,7 +333,7 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Développement d'une application permettant aux partenaires de l'entreprise de poster simplement les avis qu'ils reçoivent via leurs outils internes sur leurs pages Google. Extraction de la partie modération des avis de l'application historique afin d'en faire un service à part.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 5.2</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec la base de données MySQL</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
@@ -387,7 +387,7 @@
                                 Développement de méthodes de calcul pour déterminer des montants à partir de dates, de taux, etc. Utilisation de Xdebug dans VSCode pour déboguer le code ainsi que de PHPCS avec les normes Symfony.
                                 Découpage des exigences en tâches distinctes et quantification du temps nécessaire pour les réaliser.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en Symfony 4.4</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Communication avec la base de données PostgreSQL</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaires</li>
@@ -440,7 +440,7 @@
                                 Réalisation d'un ERP permettant la recherche et la mise en relation d'artisans avec des clients en fonction de leurs spécialités et de différents critères. Développement de l'API permettant le renvoi des informations.
                                 Utilisation d'API Platform pour adapter l'application Symfony en une API REST.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end de l'application en Symfony 4.4</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement de l'API REST</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Utilisation d'API Platform</li>
@@ -492,7 +492,7 @@
                             <p class="text-gray-600 dark:text-gray-200">
                                 Participation à plusieurs projets répondant à des besoins en interne dont la réalisation d’un ERP de gestion du processus de recrutement.
                             </p>
-                            <ul>
+                            <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement back-end en PHP Symfony 3.4</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement et dynamisation d'écrans en JQuery</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement de plusieurs applications pour le parc du Puy du Fou</li>
