--- a/index.html
+++ b/index.html
@@ -142,6 +142,63 @@
                 <div class="p-7 block-section">
                     <h2 class="block-title">Mes expériences</h2>
                     <div class="mb-5 item-section">
+                        <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/laposte.png');"></div>
+                        <div class="w-full space-y-5">
+                            <div class="item-header">
+                                <div class="space-y-1.5">
+                                    <div class="font-medium dark:text-white">Développeur PHP/Laravel</div>
+                                    <div class="flex space-x-5">
+                                        <div class="item-header-info">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                                            </svg>
+                                            <span class="dark:text-gray-400">La Poste</span>
+                                        </div>
+                                        <div class="item-header-info">
+                                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                                            </svg>
+                                            <span class="dark:text-gray-400">Nantes</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="space-y-2 sm:text-right">
+                                    <div class="job-item-badge">Mission à temps complet</div>
+                                    <div class="item-header-info">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                                        </svg>
+                                        <span class="dark:text-gray-400">Mars 2023 – Maintenant</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="text-gray-600 dark:text-gray-200">
+                                Développement d'amélioration ainsi que de correctifs pour l'application de gestion des machines de trie au niveau national. Participation à la mise en place d'un GitFlow, du framework Scrum pour la gestion du projet.
+                                Migration de PHP 7.3 à 8.2 ainsi que de Laravel 8 vers Laravel 10.
+                                Travail au sein d'une équipe de 3 personnes (1 P.O, 2 développeurs).
+                            </p>
+                            <ul class="ul-exp">
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement PHP 7.3/8.2 & Laravel 8 & 10</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Développement Angular</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaire (PHPUnit)</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
+                            </ul>
+                            <div class="-m-2 flex flex-wrap">
+                                <span class="skill-tag">PHP 7.3/8.2</span>
+                                <span class="skill-tag">Laravel 8/10</span>
+                                <span class="skill-tag">Angular</span>
+                                <span class="skill-tag">PHPUnit</span>
+                                <span class="skill-tag">MySQL</span>
+                                <span class="skill-tag">GitLab</span>
+                                <span class="skill-tag">Jenkins</span>
+                                <span class="skill-tag">Docker</span>
+                                <span class="skill-tag">Linux</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="border-b border-gray-200 mb-5"></div>
+                    <div class="mb-5 item-section">
                         <div class="flex-shrink-0 w-12 h-12 rounded-xl bg-cover" style="background-image: url('public/assets/img/nantes_universite.png');"></div>
                         <div class="w-full space-y-5">
                             <div class="item-header">
@@ -225,11 +282,11 @@
                                 </div>
                             </div>
                             <p class="text-gray-600 dark:text-gray-200">
-                                Développement de correctifs et de nouvelles fonctionnalités au sein de l'équipe de développement. Participation aux évènements Agile (daily scrum, sprint planning/review/retro). Travail au sein d'une équipe structurée de 6 développeurs.
+                                Développement de correctifs et de nouvelles fonctionnalités au sein de l'équipe de développement. Participation aux évènements Agile (daily scrum, sprint planning/review/retro). Présentation au client lors de sprint reviews. Travail au sein d'une équipe structurée de 6 développeurs.
                             </p>
                             <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Modélisation/réalisation d'une API Rest from scratch avec API Platform dans un environnement dockerisé (PHP8.1 & Symfony 5.4)</li>
-                                <li class="li-exp text-gray-600 dark:text-gray-200">Préparation de l'application à une montée de version de Symfony (3.4 -> 4.4)</li>
+                                <li class="li-exp text-gray-600 dark:text-gray-200">Préparation de l'application à une montée de version de Symfony (3.4 → 4.4)</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Rédaction de tests unitaire (PHPUnit)</li>
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Versioning et revue de code sur GitLab</li>
                             </ul>
