--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                                 </div>
                             </div>
                             <p class="text-gray-600 dark:text-gray-200">
-                                Développement d'amélioration ainsi que de correctifs pour l'application de gestion des machines de trie au niveau national. Participation à la mise en place d'un GitFlow, du framework Scrum pour la gestion du projet.
+                                Développement d'améliorations ainsi que de correctifs pour l'application de gestion des machines de trie au niveau national. Participation à la mise en place d'un GitFlow, du framework Scrum pour la gestion du projet.
                                 Migration de PHP 7.3 à 8.2 ainsi que de Laravel 8 vers Laravel 10.
-                                Travail au sein d'une équipe de 3 personnes (1 P.O, 2 développeurs).
+                                Travail au sein d'une équipe de 3 personnes (1 P.O., 2 développeurs).
                             </p>
                             <ul class="ul-exp">
                                 <li class="li-exp text-gray-600 dark:text-gray-200">Développement PHP 7.3/8.2 & Laravel 8 & 10</li>
