--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <link rel="shortcut icon" href="public/assets/img/favicon.png" type="image/x-icon">
     
     <!-- HTML Meta Tags -->
-    <title>Arthur MICHEL - Développeur PHP/Symfony</title>
+    <title>Arthur Michel - Développeur PHP/Symfony</title>
     <meta name="description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta itemprop="name" content="Arthur Michel - Développeur PHP/Symfony">
     <meta itemprop="description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta itemprop="image" content="https://zupimages.net/up/23/28/rw9g.png">
+    <meta itemprop="image" content="https://www.zupimages.net/up/24/08/zd9m.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://arthurmichel.fr">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta property="og:title" content="Arthur Michel - Développeur PHP/Symfony">
     <meta property="og:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta property="og:image" content="https://zupimages.net/up/23/28/rw9g.png">
+    <meta property="og:image" content="https://www.zupimages.net/up/24/08/zd9m.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Arthur MICHEL - Développeur PHP/Symfony">
+    <meta name="twitter:title" content="Arthur Michel - Développeur PHP/Symfony">
     <meta name="twitter:description" content="👋🏻 Je suis un développeur PHP expérimenté avec une forte expertise dans le framework Symfony">
-    <meta name="twitter:image" content="https://zupimages.net/up/23/28/rw9g.png">
+    <meta name="twitter:image" content="https://www.zupimages.net/up/24/08/zd9m.png">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="public/assets/css/styles.css">
@@ -43,7 +43,7 @@
                     <div class="pt-14 p-7 bg-white dark:bg-slate-800 relative">
                         <span class="status-badge bg-gray-400 dark:text-gray-800">Enthousiaste</span>
                         <a href="/"><img src="public/assets/img/avatar.jpg" alt="Avatar" class="user-photo"></a>
-                        <div class="text-lg font-semibold mb-1.5 dark:text-white">Arthur MICHEL</div>
+                        <div class="text-lg font-semibold mb-1.5 dark:text-white">Arthur Michel</div>
                         <div class="text-sm text-gray-400">Développeur PHP/Symfony</div>
                         <!--<div class="flex group">
                             <button class="download-btn" disabled>Download CV</button>
