--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="flex justify-between">
                             <div class="text-gray-400">Email</div>
                             <div class="font-medium text-right text-gray-600 dark:text-gray-200">
-                                dev@arthurmichel.fr
+                                contact@arthurmichel.fr
                             </div>
                         </div>
                     </div>
@@ -117,6 +117,7 @@
                     <div class="-m-2 flex flex-wrap">
                         <span class="skill-tag">PHP</span>
                         <span class="skill-tag">Symfony</span>
+                        <span class="skill-tag">API Platform</span>
                         <span class="skill-tag">Docker</span>
                         <span class="skill-tag">SQL</span>
                         <span class="skill-tag">Javascript</span>
