--- a/index.html
+++ b/index.html
@@ -643,6 +643,11 @@
                         </div>
                     </div>
                 </div>
+                <footer class="text-center text-gray-600 dark:text-gray-200">
+                    <a href="https://github.com/arthrmchl/arthurmichel.fr/tree/main">
+                        Made with ♥️ by me.
+                    </a>
+                </footer>
             </div>
         </div>
     </main>
